# aretry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aretry/: __init__.py  _core.py
src/async_retry/: __init__.py
tests/: test_retry.py
